<resources>
    <string name="app_name">Papino</string>

    <string name="tab_menu_pizza">Пиццы</string>
    <string name="tab_menu_burger">Бургеры</string>
    <string name="tab_menu_salad">Салаты</string>
    <string name="tab_menu_meat">Шашлыки</string>
    <string name="tab_menu_sandvich">Лаваш/Сендвич</string>
    <string name="tab_menu_soup">Суп</string>
    <string name="tab_menu_snacks">Закуски</string>
    <string name="tab_menu_drink">Напитки</string>
    <string name="tab_menu_bread">Хлеб</string>

</resources>